<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_item1"
            android:icon="@drawable/ic_warning"
            android:title="@string/item_1" />
        <item
            android:id="@+id/nav_item2"
            android:icon="@drawable/ic_warning"
            android:title="@string/item_2" />
        <item
            android:id="@+id/nav_item3"
            android:icon="@drawable/ic_warning"
            android:title="@string/item_3" />
        <item
            android:id="@+id/nav_item4"
            android:icon="@drawable/ic_warning"
            android:title="@string/item_4" />
        <item
            android:id="@+id/nav_item5"
            android:icon="@drawable/ic_warning"
            android:title="@string/item_5" />
        <item
            android:id="@+id/nav_item6"
            android:icon="@drawable/ic_warning"
            android:title="@string/item_6" />
    </group>

    <item android:title="@string/app_name">
        <menu>
            <item
                android:id="@+id/my_orders"
                android:icon="@drawable/ic_warning"
                android:title="@string/app_name" />
            <item
                android:id="@+id/my_cart"
                android:icon="@drawable/ic_warning"
                android:title="@string/app_name" />
            <item
                android:id="@+id/my_wishlist"
                android:icon="@drawable/ic_warning"
                android:title="@string/app_name" />
            <item
                android:id="@+id/my_rewards"
                android:icon="@drawable/ic_warning"
                android:title="@string/app_name" />
            <item
                android:id="@+id/my_account"
                android:icon="@drawable/ic_warning"
                android:title="@string/app_name" />
        </menu>
    </item>

    <item android:title="@string/app_name">
        <menu>
            <item
                android:id="@+id/contact_us"
                android:title="@string/app_name" />
            <item
                android:id="@+id/terms_conditions"
                android:title="@string/app_name" />
            <item
                android:id="@+id/help_center"
                android:title="@string/app_name" />
        </menu>
    </item>

</menu>
